<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestService</string>

    <string name="udp">UDP</string>
    <string name="tcp">TCP</string>
    <string name="broadcast">Broadcast</string>

    <string name="background">Background</string>
    <string name="normal">Normal</string>
    <string name="video">Video</string>
    <string name="voice">Voice</string>

    <string name="send_test_msg">Send Test Message</string>
    <string name="periodic">Send Periodic Messages</string>

</resources>